--- a/src/main.css
+++ b/src/main.css
@@ -8,3 +8,9 @@ html {
   margin: 0;
   padding: 0;
 }
+
+body {
+  color: var(--semi-color-text-0);
+  background-color: var(--semi-color-bg-0);
+}
+
