--- a/src/main.css
+++ b/src/main.css
@@ -14,3 +14,14 @@ body {
   background-color: var(--semi-color-bg-0);
 }
 
+@font-face {
+  font-family: "Inter";
+  src: url("https://sf6-cdn-tos.douyinstatic.com/obj/eden-cn/slepweh7nupqpognuhbo/Inter-Regular.ttf")
+    format("truetype");
+}
+
+@font-face {
+  font-family: "Inter-Bold";
+  src: url("https://sf6-cdn-tos.douyinstatic.com/obj/eden-cn/slepweh7nupqpognuhbo/Inter-Bold.ttf")
+    format("truetype");
+}
